Changelog Notes:
Nerfed Terminator aim speed
Fixed missing playerdata in initialization and incorrect values between init and oncreateplayer
Fixed Second Wind giving you more hardy charges than you should.
Indefatigable now activates when there are 3 or more zombies next to you and drag down sandbox setting is enabled
Super Immune reworked to be every minute instead of every hour
Evasive now doesn't have any hit reaction when it activates, can be disabled with sandbox setting.
New Trait: Anti-Gun Activist
Changed a global variable to playerdata (Note from Fajdek: I didn't know pz modding all that well yet when I did it)
Hardy Nerf - No longer gives +1 fitness and 6 points.